[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/textures/Cannon.png" type="Texture" id=1]
[ext_resource path="res://entities/turrets/Turret.gd" type="Script" id=2]
[ext_resource path="res://entities/turrets/TurretProjectile.tscn" type="PackedScene" id=3]

[node name="Turret" type="Sprite"]
position = Vector2( 45.4061, 36.0798 )
scale = Vector2( 0.563672, 0.550027 )
texture = ExtResource( 1 )
offset = Vector2( 0, 70 )
script = ExtResource( 2 )
projectile_scene = ExtResource( 3 )

[node name="FirePosition" type="Position2D" parent="."]
position = Vector2( 0.862839, 209.969 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 1.309
autostart = true

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
